:bug: fixed relative routes

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 								<div class="col-md-6 col-sm-6 text-center">
 									<div class="event-wrap animate-box">
 										<h3>Ceremonia nupcial</h3>
-										<img class="icons" src="./images/icon_church.svg" alt="icono-church" />
+										<img class="icons" src="images/icon_church.svg" alt="icono-church" />
 										<div class="margin_y"></div>
 										<div class="event-col">
 											<i class="icon-clock"></i>
@@ -185,7 +185,7 @@
 								<div class="col-md-6 col-sm-6 text-center">
 									<div class="event-wrap animate-box">
 										<h3>Recepción</h3>
-										<img class="icons" src="./images/icon_dancers.svg" alt="icono-dancers" />
+										<img class="icons" src="images/icon_dancers.svg" alt="icono-dancers" />
 										<div class="margin_y"></div>
 										<div class="event-col">
 											<i class="icon-clock"></i>
@@ -374,7 +374,7 @@
 									<div class="item">
 										<div class="testimony-slide active text-center">
 											<figure>
-												<img class="icons" src="./images/icon_gifts.svg" alt="icono-gifts" />
+												<img class="icons" src="images/icon_gifts.svg" alt="icono-gifts" />
 											</figure>
 											<blockquote>
 												<p>Lo más importante es que nos acompañes en este día tan especial. Si deseas hacernos un regalo, puedes elegir entre un detalle físico. </p>
@@ -387,7 +387,7 @@
 									<div class="item">
 										<div class="testimony-slide active text-center">
 											<figure>
-												<img class="icons" src="./images/icon_gifts_2.svg" alt="icono-gifts-2" />
+												<img class="icons" src="images/icon_gifts_2.svg" alt="icono-gifts-2" />
 											</figure>
 											<blockquote>
 												<p>También puedes optar por una lluvia de sobres.</p>
@@ -399,7 +399,7 @@
 									<div class="item">
 										<div class="testimony-slide active text-center">
 											<figure>
-												<img class="icons" src="./images/icon_gifts_3.svg" alt="icono-gifts-3" />
+												<img class="icons" src="images/icon_gifts_3.svg" alt="icono-gifts-3" />
 											</figure>
 											<blockquote>
 												<p>Recuerda que tu presencia ya es el mejor regalo, y cualquier detalle será recibido con mucho cariño.</p>
