:rocket: deploy stuff

--- a/details.html
+++ b/details.html
@@ -73,7 +73,7 @@
                     <br>
                     Tu mesa asignada es: <strong id="guestTable"></strong>
                 </p>
-                <p><a href="index.html" class="btn btn-default btn-sm">Ver invitación</a></p>
+                <p><a href="page.html" class="btn btn-default btn-sm">Ver invitación</a></p>
             </div>
         </div>
 		
