--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <!-- <p class="firstLine"> E &nbsp; M &nbsp; A &nbsp; I &nbsp; L &nbsp; . &nbsp; M &nbsp; E </p> -->
                 <p class="firstLine"> V&nbsp;I&nbsp;C&nbsp;T&nbsp;O&nbsp;R&nbsp; & &nbsp;K&nbsp;A&nbsp;R&nbsp;I&nbsp;N&nbsp;A</p>
                 <p class="secondLine">Ingresa tu código de invitado para que puedas ver tus pases y la invitación</p>
-                <p> <input id="guestCode" class="InputStyle" placeholder="Ingresa tu código" style="font-family:Arial, FontAwesome" type="text"> </p>
+                <p> <input id="guestCode" class="InputStyle" placeholder="Ingresa tu código" style="text-transform: uppercase; font-family:Arial, FontAwesome" type="text"> </p>
                 <p><a id="continueBtn" href="#" class="btn btn-default btn-sm">Continuar</a></p>
                 <div id="errorMsg" class="alert-danger" style="margin-top:.8rem; border-radius:12px;"></div>
             </div>
