:chart_with_upwards_trend: update location google map

--- a/page.html
+++ b/page.html
@@ -462,7 +462,8 @@
 					<div class="col-md-6 animate-box">
 						<div class="fh5co-video fh5co-bg" style="max-width: 600px; margin: auto; border-radius: 16px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.2);">
 							<!-- <a href="https://vimeo.com/channels/staffpicks/93951774" class="popup-vimeo"><i class="icon-video2"></i></a> -->
-							<iframe src="https://www.google.com/maps/embed?pb=!1m13!1m8!1m3!1d5519.39466639384!2d-86.04895826010123!3d11.988240010596963!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTHCsDU5JzExLjciTiA4NsKwMDInNDQuOSJX!5e0!3m2!1ses-419!2sni!4v1764730067455!5m2!1ses-419!2sni" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+							<!-- <iframe src="https://www.google.com/maps/embed?pb=!1m13!1m8!1m3!1d5519.39466639384!2d-86.04895826010123!3d11.988240010596963!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTHCsDU5JzExLjciTiA4NsKwMDInNDQuOSJX!5e0!3m2!1ses-419!2sni!4v1764730067455!5m2!1ses-419!2sni" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3902.1027547732288!2d-86.03908158313585!3d11.993453010385625!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f740956dfd709eb%3A0x344416a77c941ce9!2sHosanna%20Las%20Flores!5e0!3m2!1ses-419!2sni!4v1764859953557!5m2!1ses-419!2sni" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 							<!-- <div class="overlay"></div> -->
 						</div>
 					</div>
